2.403.1 2022-08-12 lichtkind
-------
    * = test release to check metacpan POD parser
    * ? completed pod on properties
    * ! linkfixes on landing POD of Chart.pm

2.403.0 2022-08-07 lichtkind
-------
    * = test release to check metacpan POD parser
    * + added Chart::Manual + property sub page
    * - drop PDF and HTML documentation
    * - drop dependency on module: POSIX

2.402.3 2022-07-18 lichtkind
-------
    * + string method to Color objects
    * ? fixed #18891 : document that y_ticks1, y_ticks2 is composite only
    * ! fixed (not interrupting Color::Value::distance_rgb even sub sub carped) 

2.402.2 2022-06-15 lichtkind
-------
    * ? linking POD of Chart::Color.pm
    * ? POD typo f_y_ticks1 => f_y_tick1
    * ? document -ring setting for ring charts
    * ! added shebang to new tests by Petr Pisar

2.402.1 2022-06-09 lichtkind
-------
    * ! fixing color value rounding in Chart::Color::Value

2.402.0 2022-06-08 lichtkind
-------
    * = first minor feature add under new maintainer
    * # main theme: colors 
    * + added 3 classes of Graph::Color::*
    * + get pantone report colors by name
    * + access to external color libs of Graphics::ColorNames::* via syntax: 'standard_name:color_name'
    * + full fledged color objects (also for later use)
    * ~ slight change in default colors for more calm professional look
    * ! fixed and added colors from X11 and HTML standard
    * ! fixing licence issues back to Perl 5

2.401.1 2022-04-04 lichtkind
-------
    * = minor fix release & test for init dzil file
    * ~ new file headers
    * ! 2 patches by Petr Pisar fixing tests
    * ? expanded TODO

2.400.10 2022-04-02 lichtkind
-------
    * = Testrelease for new metafiles
    * + cpan file

2.400.5 2022-03-31 lichtkind
-------
    * = Upload fix for failed 2.4.19 .. 2.400.04
    * ~ first upload by new maintainer: LICHTKIND
    * + files CONTRIBUTING
